--- a/index.html
+++ b/index.html
@@ -1,37 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Moldovan Matei Cristian - CV</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Moldovan Matei Cristian - Resume</title>
 </head>
 <body>
-  <header>
-    <h1>Moldovan Matei Cristian</h1>
-    <p>Technical Support Engineer</p>
-  </header>
+    <header>
+        <div class="profile-header">
+            <h1>Moldovan Matei Cristian</h1>
+            <p>Technical Support Engineer</p>
+        </div>
+    </header>
+    <main>
+        <!-- Summary section -->
+        <section class="summary-section">
+            <h2>Objective</h2>
+            <p>Motivated Technical Support Engineer with proficiency in Windows, Linux, Mac OS...</p>
+        </section>
 
-  <nav class="mode-toggle">
-    <button id="dark-mode">Dark Mode</button>
-    <button id="light-mode">Light Mode</button>
-  </nav>
+        <!-- Experience section -->
+        <section class="experience-section">
+            <h2>Experience</h2>
+            <div class="experience">
+                <h3>Tech Support Specialist | TechNest Innovations</h3>
+                <p>Supported remote users on a cutting-edge platform.</p>
+                <p>Collaborated with a dynamic team for feature testing and feedback.</p>
+                <p>Conducted virtual training sessions for new users.</p>
+                <p>Date: 2021-2023 | Location: Remote, India (Kerala)</p>
+            </div>
+            <div class="experience">
+                <h3>Technical Support Engineer | XYZ Tech Solutions</h3>
+                <p>Provided efficient technical support via phone, email, and chat.</p>
+                <p>Diagnosed and resolved complex issues, ensuring client satisfaction.</p>
+                <p>Collaborated with teams for critical issue resolution.</p>
+                <p>Date: 2020-2021 | Location: Remote, USA MI, Florida</p>
+            </div>
+            <div class="experience">
+                <h3>IT Support Specialist | Cluj-Napoca City Prefecture - Cluj-Napoca</h3>
+                <p>Promptly supported Mayor's Office staff with hardware, software, and network issues.</p>
+                <p>Assisted in setup, maintenance, and audits of computer systems.</p>
+                <p>Conducted user training, managed access permissions.</p>
+                <p>Date: 2016-2019 | Location: Cluj-Napoca, Romania</p>
+            </div>
+        </section>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <address>
-      Str.Vasile Goldis nr.8<br>
-      Romania, Cluj-Napoca, Câmpia-Turzii 405100<br>
-      <a href="mailto:moldovanmateicristian@gmail.com">moldovanmateicristian@gmail.com</a><br>
-      +40746107337
-    </address>
-  </section>
+        <!-- Education section -->
+        <section class="education-section">
+            <h2>Education</h2>
+            <div class="education">
+                <h3>Bachelor's in Management | Lucian Blaga University</h3>
+                <p>Date: 2011-2014</p>
+            </div>
+        </section>
 
-  <!-- Restul secțiunilor -->
-
-  <footer>
-    <p>Contact: <a href="mailto:moldovanmateicristian@gmail.com">moldovanmateicristian@gmail.com</a> | Phone: +40746107337</p>
-  </footer>
-  <script src="script.js"></script>
+        <!-- Certifications section -->
+        <section class="certifications-section">
+            <h2>Certifications</h2>
+            <div class="certification">
+                <h3>CompTIA A+</h3>
+            </div>
+            <div class="certification">
+                <h3>Google IT Support Professional</h3>
+            </div>
+            <div class="certification">
+                <h3>Cisco Networking Basics</h3>
+            </div>
+            <div class="certification">
+                <h3>IT Support Fundamentals</h3>
+            </div>
+            <div class="certification">
+                <h3>Introduction to Networking</h3>
+            </div>
+            <div class="certification">
+                <h3>Computer Fundamentals</h3>
+            </div>
+        </section>
+    </main>
+    <script src="script.js"></script>
 </body>
 </html>
